export const APPNAME = {
  APPNAME2: 'NextGen',
  APPNAME: 'FitCoach'
};