...
        }}
      >
        <View style={styles.content}>
          <Text style={styles.appName2}>{APPNAME.APPNAME2}</Text>
          <Text style={styles.appName}>{APPNAME.APPNAME}</Text>
          <Searchbar
            testID="search-input"
            placeholder="Search workout..."
            placeholderTextColor={CONSTANT_COLORS.BLACK}
            value={searching}
            onChangeText={updateSearch}
            onFocus={() => searching === '' && setShowRecent(true)}
            style={{
              marginTop: 10,
...
            }}
            right={() => (
              <View style={{ flexDirection: "row", alignItems: "center" }}>
                {/* CLEAR ICON (only when typing) */}
                {searching !== '' && (
                  <Pressable
                    testID="search-clear-button"
                    onPress={() => {
                      setSearching('');
                      setShowRecent(true);
                    }}
                    style={{
                      justifyContent: 'center',
...
                  >
                    <FontAwesomeIcon icon={faXmark} color="#000" size={20} />
                  </Pressable>
                )}
                {/* MICROPHONE ICON */}
                <Pressable
                  testID="search-mic-button"
                  onPress={() => handlePresentModalPress()}
                  style={{
                    justifyContent: 'center',
                    alignItems: 'center',
                    backgroundColor: CONSTANT_COLORS.GREEN,
                    borderRadius: 50,
...
