export const FUNCTION_TYPE = {
  DEMO: "Demo",
  TRACK: "Track",
  CAPS_DEMO: "DEMO",
  CAPS_TRACK: "TRACK",
} as const;